Issue #66 - Icons wrapped in entry page

--- a/html/css/_pages/newsandevents-post.css
+++ b/html/css/_pages/newsandevents-post.css
@@ -23,7 +23,6 @@
   background-size: cover;
 }
 
-
 .post-title-img::after {
   content: '';
   position: absolute;
@@ -33,7 +32,6 @@
   height: 100%;
   background-color: rgba(0,0,0,.4);
 }
-
 
   @media (min-width: 700px) {
   .post-title {
@@ -57,7 +55,22 @@
 
 .post-friends {
   color: #fff;
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
+
+  @media (max-width: 799px) {
+  .post-friends-desktop {
+    display: none;
+  }
+  }
+
+  @media (min-width: 800px) {
+  .post-friends-mobile {
+    display: none;
+  }
+  }
+
 
 .post-authorinfo {
   padding: 13px 0 0 20px;
